# template

./: Cargo.toml  LICENSE-APACHE  README.md  cargo-generate.toml  partitions.csv  pre-script.rhai  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  utils.rs
