[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
rainmaker = { git = "https://github.com/shreyash-b/rainmaker-rs" }

{% if esp -%}
[target.{{ esp_target }}.dependencies]
esp-idf-svc = "0.49"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
cc = "=1.1.31" # esp-idf-sys build fails on later versions
{% endif -%}
